RHOAIENG-38634: ODH Konflux Release Build Onboarding RStudio workbenches (#2664)
```bash
if command -v subscription-manager &> /dev/null; then
    echo "RHEL system detected. Running subscription-manager register."
    ...
else
    echo "Non-RHEL system detected. Skipping subscription-manager register."
fi
```

--- a/rstudio/rhel9-python-3.12/Dockerfile.cpu
+++ b/rstudio/rhel9-python-3.12/Dockerfile.cpu
@@ -107,7 +107,11 @@ ENV R_VERSION=4.5.1
 RUN /bin/bash <<'EOF'
 set -Eeuxo pipefail
 dnf install -y dnf-plugins-core
-subscription-manager repos --enable codeready-builder-for-rhel-9-x86_64-rpms
+if command -v subscription-manager &> /dev/null; then
+  subscription-manager repos --enable codeready-builder-for-rhel-9-x86_64-rpms
+else
+  dnf config-manager --set-enabled crb
+fi
 dnf install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm
 INSTALL_PKGS="R-core R-core-devel R-java R-Rcpp R-highlight \
 R-littler R-littler-examples openssl-libs compat-openssl11"
