--- a/rstudio/rhel9-python-3.12/build-args/cuda.conf
+++ b/rstudio/rhel9-python-3.12/build-args/cuda.conf
@@ -1,4 +1,4 @@
-# Base Image   : UBI 9 with Python 3.12
+# Base Image   : CentOS Stream 9 with Python 3.12
 # CUDA Version : 12.8.1
 # Architectures: linux/arm64, linux/x86_64
-BASE_IMAGE=quay.io/opendatahub/odh-base-image-cuda-py312-ubi9:v12.8
+BASE_IMAGE=quay.io/opendatahub/odh-base-image-cuda-py312-c9s:v12.8
