RHAIENG-948: add `subscription-manager refresh` to all UBI9-based Dockerfiles for improved subscription handling (#1686)

--- a/codeserver/ubi9-python-3.12/Dockerfile.konflux.cpu
+++ b/codeserver/ubi9-python-3.12/Dockerfile.konflux.cpu
@@ -70,6 +70,8 @@ RUN touch /tmp/control
 # cpu-base         #
 ####################
 FROM ${BASE_IMAGE} AS cpu-base
+USER 0
+RUN subscription-manager refresh
 
 WORKDIR /opt/app-root/bin
 
