--- a/jupyter/minimal/ubi9-python-3.12/Dockerfile.konflux.cpu
+++ b/jupyter/minimal/ubi9-python-3.12/Dockerfile.konflux.cpu
@@ -28,6 +28,8 @@ RUN ./install_pandoc.sh
 # cpu-base         #
 ####################
 FROM ${BASE_IMAGE} AS cpu-base
+USER 0
+RUN subscription-manager refresh
 
 WORKDIR /opt/app-root/bin
 
