RHAIENG-948: update subscription value to "true" in build-notebooks-pr-aipcc workflow
https://issues.redhat.com/browse/RHAIENG-948

--- a/.github/workflows/build-notebooks-pr-aipcc.yaml
+++ b/.github/workflows/build-notebooks-pr-aipcc.yaml
@@ -89,5 +89,6 @@ jobs:
       python: "${{ matrix.python }}"
       github: "${{ toJSON(github) }}"
       platform: "${{ matrix.platform }}"
-      subscription: "${{ matrix.subscription }}"
+      # AIPCC base images are RHEL-based, subscription is good for them
+      subscription: "true"
     secrets: inherit
