NO-JIRA: update subscription handling in build-notebooks workflows for AIPCC base images

--- a/.github/workflows/build-notebooks-push.yaml
+++ b/.github/workflows/build-notebooks-push.yaml
@@ -53,5 +53,6 @@ jobs:
       python: "${{ matrix.python }}"
       github: "${{ toJSON(github) }}"
       platform: "${{ matrix.platform }}"
-      subscription: "${{ matrix.subscription }}"
+      # rhds/notebooks builds from AIPCC base images that are RHEL-based
+      subscription: "${{ matrix.subscription || (github.repository == 'red-hat-data-services/notebooks') }}"
     secrets: inherit
