--- a/.github/workflows/build-notebooks-pr-aipcc.yaml
+++ b/.github/workflows/build-notebooks-pr-aipcc.yaml
@@ -89,6 +89,6 @@ jobs:
       python: "${{ matrix.python }}"
       github: "${{ toJSON(github) }}"
       platform: "${{ matrix.platform }}"
-      # AIPCC base images are RHEL-based, subscription is good for them
+      # rhds/notebooks builds from AIPCC base images that are RHEL-based
       subscription: "true"
     secrets: inherit
