RHAIENG-948: chore(rstudio): add npm installation to support cve_remediation when using AIPCC base image lacking npm by default
```
+ ./cve_remediation.sh
++ uname -m
+ rm /usr/lib/rstudio-server/bin/quarto/bin/tools/x86_64/esbuild
+ npm ci
./cve_remediation.sh: line 7: npm: command not found
```

--- a/rstudio/rhel9-python-3.12/Dockerfile.cuda
+++ b/rstudio/rhel9-python-3.12/Dockerfile.cuda
@@ -165,6 +165,8 @@ mkdir -p /usr/share/doc/R
 # package installation
 # install necessary texlive-framed package to make Knit R markup to PDF rendering possible
 dnf install -y libgit2-devel.x86_64 libcurl-devel harfbuzz-devel.x86_64 fribidi-devel.x86_64 cmake "flexiblas-*" texlive-framed
+# install npm to run cve_remediation script
+dnf install -y npm
 dnf clean all
 rm -rf /var/cache/yum
 (cd /tmp/utils && ./cve_remediation.sh)
