RHAIENG-948: change subscription value to `"true"` in `build-notebooks-pr-aipcc` workflow and when building `on: push` in `rhds/notebooks`

--- a/.github/workflows/build-notebooks-pr-aipcc.yaml
+++ b/.github/workflows/build-notebooks-pr-aipcc.yaml
@@ -89,5 +89,6 @@ jobs:
       python: "${{ matrix.python }}"
       github: "${{ toJSON(github) }}"
       platform: "${{ matrix.platform }}"
-      subscription: "${{ matrix.subscription }}"
+      # rhds/notebooks builds from AIPCC base images that are RHEL-based
+      subscription: "true"
     secrets: inherit
