fixup: subscription value to use expression syntax
```
Invalid workflow file: .github/workflows/build-notebooks-pr-aipcc.yaml#L93
The workflow is not valid. .github/workflows/build-notebooks-pr-aipcc.yaml (Line: 93, Col: 21): Unexpected value 'true'
```

https://github.com/opendatahub-io/notebooks/actions/runs/19304720473

--- a/.github/workflows/build-notebooks-pr-aipcc.yaml
+++ b/.github/workflows/build-notebooks-pr-aipcc.yaml
@@ -90,5 +90,5 @@ jobs:
       github: "${{ toJSON(github) }}"
       platform: "${{ matrix.platform }}"
       # rhds/notebooks builds from AIPCC base images that are RHEL-based
-      subscription: "true"
+      subscription: ${{ true }}
     secrets: inherit
