RHOAIENG-38630: update RHEL base images and architectures for rstudio configurations (#1694)
https://issues.redhat.com/browse/RHOAIENG-38630

Go to https://console.redhat.com/insights/connector/activation-keys

* Red Hat Enterprise Linux 9 for ARM 64 - AppStream - Extended Update Support (RPMs) (`rhel-9-for-aarch64-appstream-eus-rpms`)

Then at a minimum

https://konflux.pages.redhat.com/docs/users/building/activation-keys-subscription.html#automatic-registration

sudo subscription-manger refresh

```
[2/3] STEP 6/10: RUN /bin/bash <<'EOF' (set -Eeuxo pipefail...)
+ dnf -y upgrade --refresh --nobest --skip-broken --nodocs --noplugins --setopt=install_weak_deps=0 --setopt=keepcache=0
Red Hat Enterprise Linux 9 for x86_64 - AppStre 6.5 kB/s | 473  B     00:00
Errors during downloading metadata for repository 'rhel-9-for-x86_64-appstream-eus-rpms':
  - Status code: 403 for https://cdn.redhat.com/content/eus/rhel9/9.6/x86_64/appstream/os/repodata/repomd.xml (IP: 23.60.144.251)
Error: Failed to download metadata for repo 'rhel-9-for-x86_64-appstream-eus-rpms': Cannot download repomd.xml: Cannot download repodata/repomd.xml: All mirrors were tried
Error: building at STEP "RUN /bin/bash <<'EOF'": while running runtime: exit status 1
```

--- a/rstudio/rhel9-python-3.12/build-args/cpu.conf
+++ b/rstudio/rhel9-python-3.12/build-args/cpu.conf
@@ -1,3 +1,4 @@
-# Base Image   : CentOS Stream 9 with Python 3.12
-# Architectures: linux/arm64, linux/x86_64
-BASE_IMAGE=quay.io/opendatahub/odh-base-image-cpu-py312-c9s:latest
+# Base Image   : RHEL 9.6 with Python 3.12
+# Architectures: linux/arm64, linux/ppc64le, linux/x86_64, linux/s360x
+# Source       : https://quay.io/repository/aipcc/base-images/cpu
+BASE_IMAGE=quay.io/aipcc/base-images/cpu:3.1-1762903336
