--- a/rstudio/rhel9-python-3.12/build-args/cuda.conf
+++ b/rstudio/rhel9-python-3.12/build-args/cuda.conf
@@ -1,4 +1,5 @@
-# Base Image   : CentOS Stream 9 with Python 3.12
+# Base Image   : RHEL 9.6 with Python 3.12
 # CUDA Version : 12.8.1
 # Architectures: linux/arm64, linux/x86_64
-BASE_IMAGE=quay.io/opendatahub/odh-base-image-cuda-py312-c9s:v12.8
+# Source       : https://quay.io/repository/aipcc/base-images/cuda
+BASE_IMAGE=quay.io/aipcc/base-images/cuda:3.1-1762903318
