RHAIENG-948: fix(ppc): build failure due to missing openssl
add `libcurl-devel` to build dependencies for `ppc64le` and `s390x` in pyarrow and onnx builds

```
  -- Configuring done (1.8s)
  -- Generating done (0.1s)
  CMake Error at cmake_modules/ThirdpartyToolchain.cmake:5282 (set_property):
    The link interface of target "AWS::aws-c-cal" contains:

      OpenSSL::Crypto

    but the target was not found.  Possible reasons include:

      * There is a typo in the target name.
      * A find_package call is missing for an IMPORTED target.
      * An ALIAS target is missing.
```

--- a/jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu
+++ b/jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu
@@ -148,7 +148,7 @@ if [ "$TARGETARCH" = "ppc64le" ] || [ "$TARGETARCH" = "s390x" ]; then
         cmake make gcc-c++ pybind11-devel wget
         # pyarrow -DARROW_S3=ON pulls in AWS C++ SDK
         # libcurl-devel is required to build AWS C++ SDK
-        libcurl-devel
+        libcurl-devel openssl-devel
     )
     dnf install -y "${packages[@]}"
     dnf clean all
