RHAIENG-948: fix(ppc): build failure due to missing cython in aipcc wheel index
```
+ pip install --no-cache-dir -r requirements-build.txt

Looking in indexes: https://console.redhat.com/api/pypi/public-rhai/rhoai/3.0/cpu-ubi9/simple/

Ignoring oldest-supported-numpy: markers 'python_version < "3.9"' don't match your environment

ERROR: Could not find a version that satisfies the requirement cython>=0.29.31 (from versions: none)

ERROR: No matching distribution found for cython>=0.29.31
```

--- a/jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu
+++ b/jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu
@@ -179,7 +179,8 @@ if [ "$TARGETARCH" = "ppc64le" ] || [ "$TARGETARCH" = "s390x" ]; then
     make -j$(nproc) VERBOSE=1
     make install -j$(nproc)
     cd ../../python
-    pip install --no-cache-dir -r requirements-build.txt
+    # aipcc index is missing cython, and maybe more
+    pip install --no-cache-dir --extra-index-url https://pypi.org/simple -r requirements-build.txt
     PYARROW_WITH_PARQUET=1 \
     PYARROW_WITH_DATASET=1 \
     PYARROW_WITH_FILESYSTEM=1 \
