RHAIENG-948: fix(ppc): build failure due to missing protobuf>=4.25.1 in aipcc wheel index
```
+ pip wheel . -w /root/onnx_wheel
...
        ERROR: Could not find a version that satisfies the requirement protobuf>=4.25.1 (from versions: none)
        ERROR: No matching distribution found for protobuf>=4.25.1
        [end of output]
```

--- a/jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu
+++ b/jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu
@@ -235,7 +235,8 @@ if [ "${TARGETARCH}" = "ppc64le" ]; then
     pip install --no-cache-dir --extra-index-url https://pypi.org/simple -r requirements.txt
     CMAKE_ARGS="-DPython3_EXECUTABLE=$(which python3.12)"
     export CMAKE_ARGS
-    pip wheel . -w /root/onnx_wheel
+    # protobuf>=4.25.1
+    pip wheel --extra-index-url https://pypi.org/simple . -w /root/onnx_wheel
 else
     echo "Skipping ONNX build on non-Power"
     mkdir -p /root/onnx_wheel
