--- a/rstudio/rhel9-python-3.12/Dockerfile.cpu
+++ b/rstudio/rhel9-python-3.12/Dockerfile.cpu
@@ -167,14 +167,14 @@ EOF
 
 COPY ${RSTUDIO_SOURCE_CODE}/rsession.conf /etc/rstudio/rsession.conf
 
-# Install R packages
-# https://cran.r-project.org/web/packages
-COPY ${RSTUDIO_SOURCE_CODE}/install_packages.R ./
-RUN /bin/bash <<'EOF'
-set -Eeuxo pipefail
-R -f ./install_packages.R
-rm ./install_packages.R
-EOF
+# # Install R packages
+# # https://cran.r-project.org/web/packages
+# COPY ${RSTUDIO_SOURCE_CODE}/install_packages.R ./
+# RUN /bin/bash <<'EOF'
+# set -Eeuxo pipefail
+# R -f ./install_packages.R
+# rm ./install_packages.R
+# EOF
 
 ENV APP_ROOT=/opt/app-root
 
