RHAIENG-948: fix(ppc): build failure due to missing cryptography build dependencies in aipcc wheel index
```
  × Failed to download and build `cryptography==43.0.3`
  ├─▶ Failed to resolve requirements from `build-system.requires`
  ├─▶ No solution found when resolving: `maturin>=1, <2`, `cffi>=1.12
  │   ; platform_python_implementation != 'PyPy'`, `setuptools!=74.0.0,
  │   !=74.1.0, !=74.1.1, !=74.1.2, !=74.1.3, !=75.0.0, !=75.1.0, !=75.2.0`
  ╰─▶ Because only maturin==1.9.6 is available and maturin==1.9.6 has no
      wheels with a matching platform tag (e.g., `manylinux_2_34_ppc64le`), we
      can conclude that maturin==1.9.6 cannot be used.
      And because you require maturin==1.9.6, we can conclude that your
      requirements are unsatisfiable.

      hint: Wheels are available for `maturin` (v1.9.6) on the following
      platforms: `linux_aarch64`, `linux_x86_64`
```

--- a/jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu
+++ b/jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu
@@ -400,10 +400,12 @@ echo "Installing software and packages"
 #  we often don't know the correct hashes and `--require-hashes` would therefore fail on non amd64, where building is common.
 if [ "$TARGETARCH" = "ppc64le" ] || [ "$TARGETARCH" = "s390x" ]; then
     # We need special flags and environment variables when building packages
+    # aipcc does not have some dependencies to build cryptography==43.0.3 on ppc64le, so we need to use pypi.org/simple
     GRPC_PYTHON_BUILD_SYSTEM_OPENSSL=1 \
     CFLAGS="-O3" CXXFLAGS="-O3" \
     uv pip install --strict --no-deps --no-cache --no-config --no-progress \
         --verify-hashes --compile-bytecode --index-strategy=unsafe-best-match \
+        --extra-index-url https://pypi.org/simple \
         --requirements=./pylock.toml
 else
     # This may have to download and compile some dependencies, and as we don't lock requirements from `build-system.requires`,
