RHAIENG-948: fix(ppc): build failure due to missing openssl-devel to build maturin
```
        Could not find openssl via pkg-config:
        pkg-config exited with status code 1
        > PKG_CONFIG_PATH=/usr/local/lib/pkgconfig/
      PKG_CONFIG_ALLOW_SYSTEM_CFLAGS=1 pkg-config --libs --cflags openssl
        The system library `openssl` required by crate `openssl-sys` was not
      found.
        The file `openssl.pc` needs to be installed and the PKG_CONFIG_PATH
      environment variable must contain its parent directory.
        PKG_CONFIG_PATH contains the following:
            - /usr/local/lib/pkgconfig/
        HINT: you may need to install a package such as openssl, openssl-dev
      or openssl-devel.
...
        Could not find directory of OpenSSL installation, and this `-sys`
      crate cannot
        proceed without this knowledge. If OpenSSL is installed and this crate
      had
        trouble finding it,  you can set the `OPENSSL_DIR` environment
      variable for the
        compilation process.
        Make sure you also have the development packages of openssl installed.
        For example, `libssl-dev` on Ubuntu or `openssl-devel` on Fedora.
...
      warning: build failed, waiting for other jobs to finish...
      💥 maturin failed
        Caused by: Failed to build a native library through cargo
        Caused by: Cargo build finished with "exit status:
```

--- a/jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu
+++ b/jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu
@@ -389,12 +389,15 @@ EOF
 RUN /bin/bash <<'EOF'
 set -Eeuxo pipefail
 if [ "${TARGETARCH}" = "ppc64le" ]; then
-  # required to compile pillow
   packages=(
+    # required to compile pillow
     zlib-devel libjpeg-turbo-devel
     # optional pillow deps https://pillow.readthedocs.io/en/latest/installation/building-from-source.html#external-libraries
     #libtiff-devel libwebp-devel openjpeg2-devel lcms2-devel freetype-devel
     #libimagequant-devel harfbuzz-devel fribidi-devel
+
+    # required to compile maturin
+    openssl-devel
   )
   dnf install -y "${packages[@]}"
 fi
