RHAIENG-948: fix(ppc): build failure due to missing fortran to build scikit-learn
```
  × Failed to download and build `scikit-learn==1.7.2`
  ├─▶ Failed to install requirements from `build-system.requires`
  ├─▶ Failed to build `scipy==1.16.3`
  ├─▶ The build backend returned an error
  ╰─▶ Call to `mesonpy.build_wheel` failed (exit status: 1)
      [stdout]
      + meson setup
...
      ../meson.build:88:0: ERROR: Unknown compiler(s): [['gfortran'],
      ['flang-new'], ['flang'], ['nvfortran'], ['pgfortran'], ['ifort'],
      ['ifx'], ['g95']]
      The following exception(s) were encountered:
      Running `gfortran --help` gave "[Errno 2] No such file or directory:
      'gfortran'"
```

--- a/jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu
+++ b/jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu
@@ -398,6 +398,9 @@ if [ "${TARGETARCH}" = "ppc64le" ]; then
 
     # required to compile maturin
     openssl-devel
+
+    # required to compile scikit-learn
+    gcc-gfortran
   )
   dnf install -y "${packages[@]}"
 fi
