RHAIENG-1965: chore(cli): update Dockerfile.konflux* comments for consistency with `scripts/dockerfile_fragments.py` (#1710)
* https://github.com/opendatahub-io/notebooks/pull/2682

--- a/jupyter/minimal/ubi9-python-3.12/Dockerfile.cpu
+++ b/jupyter/minimal/ubi9-python-3.12/Dockerfile.cpu
@@ -101,7 +101,7 @@ COPY ${JUPYTER_REUSABLE_UTILS} utils/
 
 USER 0
 
-# Dependencies for PDF export begin
+# Dependencies for PDF export
 RUN --mount=type=cache,from=pdf-builder,source=/usr/local/,target=/pdf_builder/,rw \
     bash -c ' \
     if [[ "$(uname -m)" == "ppc64le" ]]; then \
