--- a/runtimes/rocm-tensorflow/ubi9-python-3.12/Dockerfile.rocm
+++ b/runtimes/rocm-tensorflow/ubi9-python-3.12/Dockerfile.rocm
@@ -83,11 +83,13 @@ WORKDIR /opt/app-root/bin
 COPY ${TENSORFLOW_SOURCE_CODE}/pylock.toml ./
 # Copy Elyra dependencies for air-gapped enviroment
 COPY --chown=1001 ${TENSORFLOW_SOURCE_CODE}/utils ./utils/
-# Download Elyra Bootstrapper
+### BEGIN Download Elyra Bootstrapper
 RUN curl -fL https://raw.githubusercontent.com/opendatahub-io/elyra/refs/tags/v4.3.1/elyra/kfp/bootstrapper.py \
          -o ./utils/bootstrapper.py
 # Prevent Elyra from re-installing the dependencies
 ENV ELYRA_INSTALL_PACKAGES="false"
+
+### END Download Elyra Bootstrapper
 
 RUN /bin/bash <<'EOF'
 set -Eeuxo pipefail
