--- a/runtimes/pytorch/ubi9-python-3.12/Dockerfile.konflux.cuda
+++ b/runtimes/pytorch/ubi9-python-3.12/Dockerfile.konflux.cuda
@@ -81,7 +81,14 @@ WORKDIR /opt/app-root/bin
 # Install Python packages from requirements.txt
 COPY ${PYTORCH_SOURCE_CODE}/pylock.toml ./
 # Copy Elyra dependencies for air-gapped enviroment
-COPY ${PYTORCH_SOURCE_CODE}/utils ./utils/
+COPY --chown=1001 ${PYTORCH_SOURCE_CODE}/utils ./utils/
+### BEGIN Download Elyra Bootstrapper
+RUN curl -fL https://raw.githubusercontent.com/opendatahub-io/elyra/refs/tags/v4.3.1/elyra/kfp/bootstrapper.py \
+         -o ./utils/bootstrapper.py
+# Prevent Elyra from re-installing the dependencies
+ENV ELYRA_INSTALL_PACKAGES="false"
+
+### END Download Elyra Bootstrapper
 
 RUN /bin/bash <<'EOF'
 set -Eeuxo pipefail
