RHAIENG-2042: chore(base-images): add `s390x` architecture to odh-base-image-cpu-py312-c9s
```
[2/3] STEP 1/10: FROM quay.io/opendatahub/odh-base-image-cpu-py312-c9s:latest AS cpu-base
Trying to pull quay.io/opendatahub/odh-base-image-cpu-py312-c9s:latest...
Error: creating build container: unable to copy from source docker://quay.io/opendatahub/odh-base-image-cpu-py312-c9s:latest: choosing an image from manifest list docker://quay.io/opendatahub/odh-base-image-cpu-py312-c9s:latest: no image found in manifest list for architecture "s390x", variant "", OS "linux"
```

--- a/.tekton/odh-base-image-cpu-py312-c9s-pull-request.yaml
+++ b/.tekton/odh-base-image-cpu-py312-c9s-pull-request.yaml
@@ -39,8 +39,7 @@ spec:
     - linux/x86_64
     - linux/arm64
     - linux/ppc64le
-    # TODO(jdanek): Enable s390x once it is supported in the base image.
-    #- linux/s390x
+    - linux/s390x
   pipelineRef:
     name: multiarch-pull-request-pipeline
   taskRunTemplate:
