--- a/.tekton/odh-base-image-cpu-py312-c9s-push.yaml
+++ b/.tekton/odh-base-image-cpu-py312-c9s-push.yaml
@@ -37,8 +37,7 @@ spec:
     - linux/x86_64
     - linux/arm64
     - linux/ppc64le
-    # TODO(jdanek): Enable s390x once it is supported in the base image.
-    #- linux/s390x
+    - linux/s390x
   pipelineRef:
     name: multiarch-push-pipeline
   taskRunTemplate:
