RHAIENG-2061: chore(.dockerignore): exclude more files and directories
Expanded ignored entries to include all `.DS_Store` instances, `node_modules`, markdown files, and documentation-related directories (`docs/`, `examples/`).

--- a/.dockerignore
+++ b/.dockerignore
@@ -29,5 +29,13 @@ venv/
 *.log
 
 # OS-specific files
-.DS_Store
+**/.DS_Store
 Thumbs.db
+
+# Node
+**/node_modules/
+
+# Documentation
+*.md
+docs/
+examples/
