--- a/jupyter/pytorch+llmcompressor/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/pytorch+llmcompressor/ubi9-python-3.12/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     # llmcompressor packages
     "llmcompressor~=0.8.1",
     "lm-eval~=0.4.9",
+    "compressed-tensors==0.12.2",
 
     # Datascience and useful extensions
     "boto3~=1.40.52",
@@ -87,12 +88,6 @@ explicit = true
 # https://docs.astral.sh/uv/concepts/resolution/#dependency-overrides
 # https://docs.astral.sh/uv/reference/settings/#override-dependencies
 [tool.uv]
-# https://github.com/astral-sh/uv/issues/2686
-# https://github.com/astral-sh/uv/issues/4422
-override-dependencies = [
-    # vllm is a requirement, however, as compressed-tensors is pinned, this can't be installed together
-    "compressed-tensors",
-]
 
 # from https://redhat-internal.slack.com/archives/C079FE5H94J/p1756934476976759?thread_ts=1756933154.294109&cid=C079FE5H94J
 constraint-dependencies = [
